// Distributed Job Scheduler — database schema in DBML
// Paste this into https://dbdiagram.io to render an interactive ER diagram
// Source of truth: server/migrations/000001_init_schema.up.sql

Project distributed_job_scheduler {
  database_type: 'PostgreSQL'
  Note: '''
    Distributed Job Scheduler — schema backing a multi-tenant platform that
    executes background jobs across a fleet of workers, with retries,
    dead-lettering, and cron scheduling.
    See server/docs/design-decisions.md for the reasoning behind this schema.
  '''
}

Table organizations {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Tenant boundary. Every other table is scoped to one, directly or transitively.'
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [not null]
  email text [not null, unique]
  password_hash text [not null]
  role text [not null, default: 'member', note: 'one of: owner, admin, member']
  created_at timestamptz [not null, default: `now()`]

  Note: 'Login identity. Owns projects and authenticates via JWT.'
}

Table projects {
  id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [not null]
  owner_id uuid [not null]
  name text [not null]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Groups related queues under one owner, e.g. one project per service.'
}

Table retry_policies {
  id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [not null]
  name text [not null]
  strategy text [not null, note: 'one of: fixed, linear, exponential']
  base_delay_ms int [not null, default: 5000]
  max_delay_ms int [not null, default: 60000]
  max_attempts int [not null, default: 5]
  multiplier decimal [not null, default: 2]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (org_id, name) [unique]
  }

  Note: 'Reusable backoff config. A queue has a default; a job can override it.'
}

Table queues {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null]
  retry_policy_id uuid [not null]
  name text [not null]
  priority int [not null, default: 0]
  concurrency_limit int [not null, default: 5]
  is_paused bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (project_id, name) [unique]
    project_id
  }

  Note: 'A named lane of work with its own priority, concurrency cap, and pause switch.'
}

Table scheduled_jobs {
  id uuid [pk, default: `gen_random_uuid()`]
  queue_id uuid [not null]
  cron_expression text [not null]
  payload_template jsonb [not null, default: `'{}'`]
  next_run_at timestamptz [not null]
  is_active bool [not null, default: true]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    next_run_at [note: 'partial index: WHERE is_active']
  }

  Note: 'Cron definition. The scheduler turns each due fire into a row in jobs.'
}

Table jobs {
  id uuid [pk, default: `gen_random_uuid()`]
  queue_id uuid [not null]
  scheduled_job_id uuid
  retry_policy_id uuid
  type text [not null, note: 'one of: immediate, delayed, scheduled, recurring, batch']
  status text [not null, default: 'queued', note: 'one of: scheduled, queued, claimed, running, completed, failed, dead']
  payload jsonb [not null, default: `'{}'`]
  idempotency_key text
  priority int [not null, default: 0]
  attempts int [not null, default: 0]
  max_attempts int [not null, default: 5]
  batch_id uuid
  run_at timestamptz [not null, default: `now()`]
  locked_by text
  locked_at timestamptz
  last_error text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (queue_id, status, priority, run_at) [note: 'covers the atomic-claim query']
    (queue_id, idempotency_key) [unique, note: 'partial index: WHERE idempotency_key IS NOT NULL']
    batch_id [note: 'partial index: WHERE batch_id IS NOT NULL']
  }

  Note: 'One unit of work moving through the lifecycle: scheduled/queued -> claimed -> running -> completed/dead.'
}

Table workers {
  id uuid [pk, default: `gen_random_uuid()`]
  hostname text [not null]
  status text [not null, default: 'online', note: 'one of: online, offline']
  started_at timestamptz [not null, default: `now()`]

  Note: 'One registered worker process. Real liveness comes from worker_heartbeats, not status alone.'
}

Table job_executions {
  id uuid [pk, default: `gen_random_uuid()`]
  job_id uuid [not null]
  worker_id uuid [not null]
  attempt_number int [not null]
  status text [not null, note: 'one of: running, succeeded, failed']
  started_at timestamptz [not null, default: `now()`]
  finished_at timestamptz
  error_message text
  duration_ms int

  Indexes {
    (job_id, attempt_number)
    worker_id
  }

  Note: 'One row per attempt on a job — the audit trail a retry-only counter on jobs would lose.'
}

Table job_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  job_execution_id uuid [not null]
  logged_at timestamptz [not null, default: `now()`]
  level text [not null, default: 'info', note: 'one of: debug, info, warn, error']
  message text [not null]

  Indexes {
    (job_execution_id, logged_at)
  }

  Note: 'Structured log lines emitted during one execution attempt.'
}

Table worker_heartbeats {
  id uuid [pk, default: `gen_random_uuid()`]
  worker_id uuid [not null]
  reported_at timestamptz [not null, default: `now()`]
  active_job_count int [not null, default: 0]

  Indexes {
    (worker_id, reported_at)
  }

  Note: 'Periodic pulse from each worker — its absence is what triggers reaping a stale claim.'
}

Table dead_letter_queue {
  id uuid [pk, default: `gen_random_uuid()`]
  job_id uuid [not null]
  final_error text
  payload_snapshot jsonb
  failed_at timestamptz [not null, default: `now()`]
  replayed bool [not null, default: false]

  Indexes {
    job_id
  }

  Note: 'Terminal home for a job that exhausted every retry — kept for inspection and manual replay.'
}

// ---------- relationships ----------
// [delete: ...] mirrors the actual ON DELETE behavior in the migration —
// most of the tree cascades, but three FKs deliberately restrict or null out
// instead (see server/docs/design-decisions.md for why).

Ref: users.org_id > organizations.id [delete: cascade]
Ref: projects.org_id > organizations.id [delete: cascade]
Ref: projects.owner_id > users.id [delete: restrict]
Ref: retry_policies.org_id > organizations.id [delete: cascade]
Ref: queues.project_id > projects.id [delete: cascade]
Ref: queues.retry_policy_id > retry_policies.id [delete: restrict]
Ref: scheduled_jobs.queue_id > queues.id [delete: cascade]
Ref: jobs.queue_id > queues.id [delete: cascade]
Ref: jobs.scheduled_job_id > scheduled_jobs.id [delete: set null]
Ref: jobs.retry_policy_id > retry_policies.id [delete: set null]
Ref: job_executions.job_id > jobs.id [delete: cascade]
Ref: job_executions.worker_id > workers.id [delete: cascade]
Ref: job_logs.job_execution_id > job_executions.id [delete: cascade]
Ref: worker_heartbeats.worker_id > workers.id [delete: cascade]
Ref: dead_letter_queue.job_id > jobs.id [delete: cascade]
